--- a/html/empresa.html
+++ b/html/empresa.html
@@ -12,9 +12,7 @@
         content="equipo de expertos, experiencia en ventanas, compromiso con la calidad, empresa de ventanas, historia de la empresa, ventanas personalizadas, servicio al cliente.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="../css/main.css" />
     <title>Cycwin</title>
 </head>
@@ -23,12 +21,12 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <a href="/" class="navbar-brand">
-                <img src="../img/logo_blanco.png" alt="logo" width="200">
+                <img src="../img/logo_blanco.webp" alt="logo" width="200">
             </a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse text-white px-5 justify-content-end" id="navbarCollapse">
+            <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav">
                     <a href="../index.html" class="nav-item nav-link fs-5">Inicio</a>
                     <a href="productos.html" class="nav-item nav-link fs-5 ">Productos</a>
@@ -38,13 +36,12 @@
                 </div>
             </div>
         </nav>
+
+
     </header>
     <main class="quienesSomos">
         <h1>Nuestra empresa</h1>
 
-        <div class="mision">
-
-        </div>
         <div class="row">
             <div class="col-lg pb-2 misionVision">
                 <h3>Misión:</h3>
@@ -73,7 +70,7 @@
 
             <div class="col-lg pb-2 imgEmpresa">
 
-                <img src="../img/construyendo.jpg" height="500px" alt="imagen de la empresa" />
+                <img src="../img/construyendo.webp" height="500px" alt="imagen de la empresa" />
             </div>
         </div>
 
@@ -136,6 +133,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
         crossorigin="anonymous"></script>
+
 </body>
 
 </html>
