--- a/html/proyectos.html
+++ b/html/proyectos.html
@@ -5,16 +5,13 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/png" href="../img/favicon.png">
+  <link rel="icon" type="image/png" href="../img/favicon.webp">
   <meta name="description"
     content="Echa un vistazo a nuestros proyectos realizados, donde la calidad y el arte en ventanas, persianas y vidrio se unen. Inspírate con nuestras obras y visualiza cómo podemos transformar tu espacio">
   <meta name="keywords"
     content="proyectos ventanas, instalación de ventanas, renovación con vidrio, trabajos realizados, ejemplos de proyectos, transformación del hogar, proyectos de diseño.">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../css/main.css" />
   <!-- link animaciones -->
   <link rel="stylesheet" href="../css/animate.css">
@@ -25,7 +22,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark">
       <a href="/" class="navbar-brand">
-        <img src="../img/logo_blanco.png" alt="logo" width="200">
+        <img src="../img/logo_blanco.webp" alt="logo" width="200">
       </a>
       <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
@@ -45,8 +42,8 @@
     <h1>Proyectos Realizados</h1>
     <main>
       <div class="contenedorProyectos">
-        <div class="proyecto  wow fadeInRight" data-wow-delay="0.2s" data-wow-duration="2s">
-          <img class="imgProyecto" src="../img/proyecto1.jpg" alt="foto casa en la playa" />
+        <div class="proyecto wow fadeInRight" data-wow-delay="0.2s" data-wow-duration="2s">
+          <img class="imgProyecto" src="../img/proyecto1.webp" alt="foto casa en la playa" />
           <div class="textoProyecto">
             <h3>Proyecto Playa Tunquen</h3>
             <p>
@@ -58,7 +55,8 @@
           </div>
         </div>
         <div class="proyecto wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="2s">
-          <div class="textoProyecto  text-end">
+          <img class="imgProyecto" src="../img/proyecto2.webp" alt="foto escalera con cubierta de vidrio" />
+          <div class="textoProyecto">
             <h3>Proyecto lucarna terraza</h3>
             <p>
               Esta escalera, que incorpora un techo de vidrio, permite la entrada de luz natural, creando una sensación
@@ -67,10 +65,9 @@
             </p>
             <a class="btnVerMas" href="error.html">Ver más</a>
           </div>
-          <img class="imgProyecto" src="../img/proyecto2.jpeg" alt="foto escalera con cubierta de vidrio" />
         </div>
         <div class="proyecto wow fadeInRight" data-wow-delay="0.2s" data-wow-duration="2s">
-          <img class="imgProyecto" src="../img/proyecto4.jpg" alt="ventanas de vidrio con vista al mar" />
+          <img class="imgProyecto" src="../img/proyecto4.webp" alt="ventanas de vidrio con vista al mar" />
           <div class="textoProyecto">
             <h3>Proyecto parcela Algarrobo</h3>
             <p>
