--- a/html/productos.html
+++ b/html/productos.html
@@ -5,16 +5,13 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/png" href="../img/favicon.png">
+  <link rel="icon" type="image/png" href="../img/favicon.webp">
   <meta name="description"
     content="Explora nuestra amplia gama de productos, desde ventanas termopanel de PVC hasta elegantes persianas de aluminio y soluciones en vidrio. Encuentra la opción perfecta para tu proyecto de renovación o construcción">
   <meta name="keywords"
     content=" ventanas termopanel PVC, persianas de aluminio, ventanas de PVC, ventanas de aluminio, vidrio templado, vidrio laminado, variedad de ventanas, opciones de persianas.">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <!-- Link css -->
   <link rel="stylesheet" href="../css/main.css" />
@@ -27,7 +24,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark">
       <a href="/" class="navbar-brand">
-        <img src="../img/logo_blanco.png" alt="logo" width="200">
+        <img src="../img/logo_blanco.webp" alt="logo" width="200">
       </a>
       <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
