--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="img/favicon.webp">
     <meta name="description"
         content="Descubre la excelencia en ventanas termopanel de PVC, persianas de aluminio y trabajos con vidrio. Transforma tu hogar con la mejor calidad y diseño. Bienvenido a nuestro mundo de soluciones para tu espacio">
     <meta name="keywords"
         content="ventanas, PVC, aluminio, cierres, showerdoor, termopaneles, renovación de ventanas, ventanas a medida, ventanas modernas">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/main.css" />
     <title>Cycwin</title>
 </head>
@@ -24,7 +21,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark">
             <a href="/" class="navbar-brand">
-                <img src="img/logo_blanco.png" alt="logo" width="200">
+                <img src="img/logo_blanco.webp" alt="logo" width="200">
             </a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -44,13 +41,13 @@
         <div id="carouselExampleInterval" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="5000">
-                    <img src="img/banner.jpg" class="d-block w-100 " alt="banner" />
+                    <img src="img/banner.webp" class="d-block w-100 " alt="banner" />
                 </div>
                 <div class="carousel-item" data-bs-interval="5000">
-                    <img src="img/proyecto2.jpeg" class="d-block w-100" alt="...">
+                    <img src="img/proyecto2.webp" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item" data-bs-interval="5000">
-                    <img src="img/proyecto3.jpg" class="d-block w-100" alt="...">
+                    <img src="img/proyecto3.webp" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
@@ -118,7 +115,7 @@
 
     <div>
         <a href="html/contacto.html">
-            <img src="img/email.png" class="contacto" alt="contacto" />
+            <img src="img/email.webp" class="contacto" alt="contacto" />
         </a>
     </div>
 
