actualizacion de link de repositorio github en footer

--- a/html/proyectos.html
+++ b/html/proyectos.html
@@ -92,7 +92,7 @@
           </svg>
         </a>
 
-        <a class="btn btn-link btn-floating btn-lg m-1" href="https://github.com/OsvaldoJCM/preentrega" target="_blank"
+        <a class="btn btn-link btn-floating btn-lg m-1" href="https://github.com/OsvaldoJCM/PF-CRUZ" target="_blank"
           role="button">
           <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-github"
             viewBox="0 0 16 16">
