--- a/html/error.html
+++ b/html/error.html
@@ -54,7 +54,7 @@
                     </svg>
                 </a>
 
-                <a class="btn btn-link btn-floating btn-lg m-1" href="https://github.com/OsvaldoJCM/preentrega"
+                <a class="btn btn-link btn-floating btn-lg m-1" href="https://github.com/OsvaldoJCM/PF-CRUZ"
                     target="_blank" role="button">
                     <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                         class="bi bi-github" viewBox="0 0 16 16">
